fix awkward scrolling on mobile + update resume + add slides

--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -13,7 +13,7 @@ h3 {
     padding-bottom: 10px;
 }
 
-.tab {
+.tabs {
     /*border-top: .2em solid #d3ccc1;*/
     border-bottom: .2em solid #d3ccc1;
     text-align: center;
@@ -49,11 +49,40 @@ div .tabcontent {
     height: 50vh;
     overflow: auto;
     padding: 5px;
+    /*-webkit-animation: fadeEffect 0.5s;*/
+    /*animation: fadeEffect 0.5s;*/
 }
 
 div .tabcontent.active {
     display: block;
+    /*-webkit-animation: fadeEffect 0.5s;*/
+    /*animation: fadeEffect 0.5s;*/
 }
+
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 b {
     font-weight: bold;
+}
+
+@media only screen and (max-width: 640px) {
+    div.shell {
+        overflow-x: hidden;
+        overflow-y: auto;
+        max-width: 100vw;
+    }
+    section#main_content {
+        padding: 0 5vw;
+    }
+    span.banner-fix {
+        display: none;
+    }
 }
